# baik-next

./: Cargo.toml  Makefile  README.md
examples/: baik.ina  bool.ina  fungsi.ina  halo.ina
src/: baik.pest  grammer.pest  lexer.rs  lib.rs  main.rs
src/builtin/: builtin.rs  mod.rs
src/core/: interpreter-old.rs  interpreter.rs  lexer.rs  mod.rs
src/core/math/: math.rs  mod.rs
src/core/tulis/: mod.rs  tulis.rs
src/error/: mod.rs
src/expr/: expr.rs  mod.rs
src/function/: function.rs  mod.rs
src/grammar/: baik-old.pest
src/grammer/: baik.pest
src/node/: mod.rs  node.rs
src/operator/: mod.rs  operator.rs
src/parser/: error.rs  grammar.rs  input_location.rs  mod.rs  precedence.rs
src/parser/ast/: atom.rs  binary.rs  boolean.rs  float.rs  function.rs  identifier.rs  integer.rs  local.rs  mod.rs  string.rs  term.rs  ty.rs  typespec.rs  unary.rs
src/tree/: mod.rs  tree.rs
tests/: tests.rs
